[package]
name = "ns-opm-im"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["fsm"]

[dependencies]
colorous = "1.0.5"
crseo = { git = "https://github.com/rconan/crseo.git", branch = "ns-opm-im", features = ["dos"] }
dosio = { git = "https://github.com/rconan/dosio.git", branch = "ns-opm-im" }
fem = { git = "https://github.com/rconan/fem.git", branch = "ns-opm-im", features = ["dos"] }
geotrans = { git = "https://github.com/rconan/geotrans.git", branch = "main" }
humantime = "2.1.0"
indicatif = "0.16.2"
m1-ctrl = { git = "https://github.com/rconan/m1-ctrl.git", branch = "ns-opm-im" }
mount-ctrl = { git = "https://github.com/rconan/mount-ctrl.git", branch = "ns-opm-im" }
plotters = "0.3.1"
simple_logger = "1.12.1"
skyangle = { git = "https://github.com/rconan/skyangle.git", branch = "main" }
structopt = "0.3.22"
triangle-rs = { git = "https://github.com/rconan/triangle-rs.git", branch = "main" }
windloading = { git = "https://github.com/rconan/windloading.git", branch = "ns-opm-im" }
zernike = { git = "https://github.com/rconan/zernike.git", branch = "main" }
fsm = { path = "fsm"}
serde-pickle = "0.6.2"
thiserror = "1.0.28"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
rand_distr = "0.4.1"
rayon = "1.5.1"
nalgebra = "0.29.0"
spade = "1.8.2"
complot = { git = "https://github.com/rconan/complot.git", branch = "ns-opm-im" }

[dev-dependencies]
criterion = "0.3"
mat73 = { git = "https://github.com/rconan/mat73.git", branch = "main" }

[[bench]]
name = "benchmark"
harness = false
