[package]
name = "ns-opm-im"
version = "0.1.0"
edition = "2018"
default-run = "main"

[workspace]
members = ["fsm","active_optics"]

[dependencies]
colorous = "1.0.5"
#crseo = { git = "https://github.com/rconan/crseo.git", branch = "ns-opm-im", features = ["dos"] }
crseo = { path = "../crseo", features = ["dos"] }
fem = { version = "^0.1", features = ["dos"] , package = "gmt-fem" }
humantime = "2.1.0"
indicatif = "0.16.2"
m1-ctrl = "^0.1.0"
mount-ctrl = "^0.1.0"
plotters = "0.3.1"
simple_logger = "1.12.1"
skyangle = { git = "https://github.com/rconan/skyangle.git", branch = "main" }
structopt = "0.3.22"
windloading = { path = "../windloading" }
fsm = { path = "fsm"}
serde-pickle = "0.6.2"
thiserror = "1.0.28"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.4"
rand_distr = "0.4.1"
rayon = "1.5.1"
nalgebra = "0.29.0"
spade = "1.8.2"
active_optics = { path = "active_optics" }
complot = { version = "0.3.1", features = ["svg"] }
tokio = { version = "^1.0", features = ["rt"] }
env_logger = "0.9.0"
log = "0.4.14"
dosio = "0.1.2"
geotrans = "0.2.1"
triangle-rs = "0.1.2"
zernike = "^0.2.0"

[dev-dependencies]
criterion = "0.3"
#mat73 = { git = "https://github.com/rconan/mat73.git", branch = "main" }

[[bench]]
name = "benchmark"
harness = false
