[package]
name = "fsm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.5"
simulink-binder = { git = "https://github.com/rconan/simulink-binder.git", branch = "main" }
dosio = { git = "https://github.com/rconan/dosio.git", branch = "ns-opm-im" }

[build-dependencies]
cc = "1.0.69"
